--- a/examples/standalone/index.html
+++ b/examples/standalone/index.html
@@ -9,8 +9,11 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="https://unpkg.com/@ignisign/js@1.0.0/dist/index.js" ></script>
-  
+  <!-- <script src="https://unpkg.com/@ignisign/js@1.0.1/dist/index.js" ></script> -->
+  <!-- <script src="http://localhost:8000/dist/index.js"></script> -->
+  <!-- <script src="../../dist/index.js"></script> -->
+
+
 </head>
 
 <body>
